# RadarSim

./: CHANGELOG.md  PHASE_3_EVOLUTION.md  README.md  RELEASE_DRAFT.md  batch_run.py  capture_screenshots.py  headless.py  plot_performance.py  pyproject.toml  run_gui.py
.github/workflows/: release.yml
benchmarks/: network_manager_benchmark.py
docs/: LOCAL_WINDOWS_SETUP_NOTES.md
examples/: api_examples.py
src/advanced/: __init__.py  ai_director.py  eccm.py  lpi_radar.py  sar_isar.py  sensor_fusion.py  signal_processing.py  simulation_engine.py  webgl_renderer.py
src/components/: antenna.py
src/io/: exporter.py  replay_loader.py  scenario_loader.py
src/ml/: inference_engine.py  trainer.py
src/physics/: __init__.py  atmospheric.py  clutter.py  ecm.py  metrics.py  radar_equation.py  rcs.py  terrain.py
src/signal/: antenna_pattern.py  cfar.py  pulse_doppler.py  rf_spectrum.py  waveforms.py
src/simulation/: __init__.py  engine.py  headless_runner.py  network_manager.py  objects.py  recorder.py
src/tracking/: __init__.py  ekf.py  kalman.py  tracker.py
src/ui/: a_scope.py  analysis_panel.py  analysis_window.py  b_scope.py  main_window.py  noise_effects.py  playback_panel.py  ppi_scope.py  range_doppler.py  rhi_scope.py  sar_viewer.py  splash_screen.py  symbology.py  tactical_3d.py  thread_manager.py
src/ui/analysis/: ambiguity_plot.py  roc_curve.py  snr_histogram.py
src/ui/overlays/: perf_monitor.py
src/ui/panels/: radar_controls.py  target_inspector.py
src/utils/: geo_integration.py
src/visualization/: matplotlib_3d.py
tests/: test_eccm.py  test_ekf.py  test_network_fusion.py  test_phase30.py  test_physics_core.py  test_physics_validation.py  test_pulse_doppler.py  test_signal_processing.py  test_simulation.py
